# pureclaw

./: .coverage-thresholds.json  .gitignore  .gitmodules  .hlint.yaml  CLAUDE.md  LICENSE  Makefile  README.md  SPRINT-PLAN.md  cabal.project  flake.nix  pureclaw.cabal
.beads/: dolt-server.activity  metadata.json
.beads/backup/: backup_state.json  config.jsonl  events.jsonl  issues.jsonl
.beads/plans/: active-plan.md  sessions-and-agents.md
.claude/commands/: create-issue.md  pr-shepherd.md  self-reflect.md
.claude/guides/: build-validation.md  coding-standards.md  git-workflow.md  testing-patterns.md  worktree-development.md
.claude/rubrics/: architecture-rubric.md  code-review-rubric.md  plan-review-rubric.md  security-review-rubric.md  test-coverage-rubric.md
.claude/templates/: CLAUDE-append.md  CLAUDE.md  beads-developer-setup.md  beads-readme.md  ci.yml  external-tools-setup.md
.githooks/: pre-push
.github/workflows/: ci.yml
.metaswarm/: external-tools.yaml  project-profile.json
app/: Main.hs
coverage/: index.html
coverage/main/: hpc_index.html  hpc_index_alt.html  hpc_index_exp.html  hpc_index_fun.html  summary.txt
coverage/main/pureclaw-0.1.0.0-inplace/: PureClaw.Agent.Context.hs.html  PureClaw.Agent.Loop.hs.html  PureClaw.Agent.SlashCommands.hs.html  PureClaw.CLI.Commands.hs.html  PureClaw.CLI.Config.hs.html  PureClaw.Core.Config.hs.html  PureClaw.Handles.Log.hs.html  PureClaw.Providers.Class.hs.html  PureClaw.Providers.Ollama.hs.html  PureClaw.Session.Handle.hs.html  PureClaw.Tools.Message.hs.html  PureClaw.Transcript.Combinator.hs.html
coverage/pr-14/: hpc_index.html  hpc_index_alt.html  hpc_index_exp.html  hpc_index_fun.html  summary.txt
coverage/pr-14/pureclaw-0.1.0.0-inplace/: PureClaw.Agent.Context.hs.html  PureClaw.Agent.Loop.hs.html  PureClaw.CLI.Commands.hs.html  PureClaw.Channels.CLI.hs.html  PureClaw.Channels.Signal.hs.html  PureClaw.Channels.Telegram.hs.html  PureClaw.Core.Errors.hs.html  PureClaw.Handles.Channel.hs.html  PureClaw.Handles.Log.hs.html  PureClaw.Handles.Network.hs.html  PureClaw.Memory.SQLite.hs.html  PureClaw.Providers.Anthropic.hs.html  PureClaw.Providers.Class.hs.html  (+7 more)
coverage/pr-16/: hpc_index.html  hpc_index_alt.html  hpc_index_exp.html  hpc_index_fun.html  summary.txt
coverage/pr-17/: hpc_index.html  hpc_index_alt.html  hpc_index_exp.html  hpc_index_fun.html  summary.txt
coverage/pr-18/: hpc_index.html  hpc_index_alt.html  hpc_index_exp.html  hpc_index_fun.html
coverage/pr-20/: hpc_index.html  hpc_index_alt.html  hpc_index_exp.html  hpc_index_fun.html  summary.txt
coverage/pr-21/: hpc_index.html  hpc_index_alt.html  hpc_index_exp.html  summary.txt
coverage/pr-22/: hpc_index.html  hpc_index_alt.html  hpc_index_exp.html  hpc_index_fun.html  summary.txt
coverage/pr-24/: hpc_index.html  hpc_index_alt.html  hpc_index_exp.html  hpc_index_fun.html  summary.txt
coverage/pr-25/: hpc_index.html  hpc_index_alt.html  hpc_index_exp.html  hpc_index_fun.html  summary.txt
coverage/pr-26/: hpc_index.html  hpc_index_alt.html  hpc_index_exp.html  hpc_index_fun.html  summary.txt
coverage/pr-27/: hpc_index.html  hpc_index_alt.html  hpc_index_exp.html  hpc_index_fun.html  summary.txt
coverage/pr-28/: hpc_index_alt.html  hpc_index_exp.html  hpc_index_fun.html  summary.txt
coverage/pr-29/: hpc_index.html  hpc_index_alt.html  hpc_index_exp.html  hpc_index_fun.html  summary.txt
coverage/pr-30/: hpc_index.html  hpc_index_alt.html  hpc_index_exp.html  hpc_index_fun.html  summary.txt
coverage/pr-31/: hpc_index.html  hpc_index_alt.html  hpc_index_exp.html  hpc_index_fun.html  summary.txt
coverage/pr-33/: hpc_index.html  hpc_index_alt.html  hpc_index_exp.html  hpc_index_fun.html  summary.txt
coverage/pr-34/: hpc_index.html  hpc_index_alt.html  hpc_index_exp.html  hpc_index_fun.html  summary.txt
coverage/pr-37/: hpc_index.html  hpc_index_alt.html  hpc_index_exp.html  hpc_index_fun.html  summary.txt
coverage/pr-39/: hpc_index.html  hpc_index_alt.html  hpc_index_exp.html  hpc_index_fun.html  summary.txt
coverage/pr-44/: hpc_index.html  hpc_index_exp.html  hpc_index_fun.html  summary.txt
docs/: ARCHITECTURE.md  BEHAVIORAL_TEST_PLAN.md  SECURITY_PRACTICES.md  gap-analysis-hermes-agent.md  gap-analysis-openclaw.md
frontend/: DESIGN.md  design-tokens.css  index.html  mockup.html  package-lock.json  package.json
frontend/src/: App.css  App.tsx  types.ts
scripts/: beads-self-reflect.ts
src/PureClaw/: Harness.hs  Transcript.hs
test/: Main.hs
test/Agent/: AgentDefSpec.hs  CompactionSpec.hs  CompletionSpec.hs  ContextSpec.hs  ContextTrackerSpec.hs  IdentitySpec.hs  LoopSpec.hs  MemorySpec.hs  SlashCommandsSpec.hs
test/Auth/: AnthropicOAuthSpec.hs
test/CLI/: CommandsSpec.hs  ConfigSpec.hs  ImportSpec.hs
test/Channels/: CLISpec.hs  ClassSpec.hs  SignalSpec.hs  SignalTransportSpec.hs  TelegramSpec.hs
test/Core/: ConfigSpec.hs  ErrorsSpec.hs  TypesSpec.hs
test/Gateway/: AuthSpec.hs  RoutesSpec.hs  ServerSpec.hs
test/Handles/: ChannelSpec.hs  FileSpec.hs  HarnessSpec.hs  LogSpec.hs  MemorySpec.hs  NetworkSpec.hs  ProcessSpec.hs  ShellSpec.hs  TranscriptSpec.hs
test/Harness/: ClaudeCodeSpec.hs  TmuxSpec.hs
test/Integration/: CLISpec.hs  ImportRoundTripSpec.hs  SignalFlowSpec.hs
test/Memory/: MarkdownSpec.hs  NoneSpec.hs  SQLiteSpec.hs
test/Providers/: AnthropicSpec.hs  ClassSpec.hs  OllamaSpec.hs  OpenAISpec.hs  OpenRouterSpec.hs
test/Scheduler/: CronSpec.hs  HeartbeatSpec.hs
test/Security/: CommandSpec.hs  CryptoSpec.hs  PairingSpec.hs  PathSpec.hs  PolicySpec.hs  SecretsSpec.hs  VaultAgeSpec.hs  VaultPassphraseSpec.hs  VaultPluginSpec.hs  VaultSpec.hs
test/Session/: HandleSpec.hs  TypesSpec.hs
test/Tools/: CronSpec.hs  EditSpec.hs  FileReadSpec.hs  GitSpec.hs  ImageSpec.hs  MemorySpec.hs  MessageSpec.hs  ProcessSpec.hs  RegistrySpec.hs  ShellSpec.hs  WebSearchSpec.hs
test/Transcript/: CombinatorSpec.hs  ProviderSpec.hs  TypesSpec.hs
test/captures/: README.md
test/scripts/: capture-scenario.sh
tools/: README.md  compare-requests.py  mock-provider.py  proxy.py
(+270 files in other folders)
