cabal-version:      3.4
name:               pureclaw
version:            0.1.0.0
synopsis:           A Haskell-native AI agent runtime with security-by-construction
description:
  PureClaw is a complete AI agent runtime built in Haskell. It uses the type
  system to enforce security invariants that other runtimes enforce (or fail
  to enforce) through runtime checks and documentation.
  .
  Key properties:
  .
  * Shell commands require AuthorizedCommand — unauthorized execution is a type error
  * File access requires SafePath — workspace escape is a type error
  * Secrets have redacted Show instances — credential leaks are structurally prevented
  * Security policy is pure Haskell — fully testable without IO
  * Effect constraints declare capabilities — each function's type is an audit trail

license:            MIT
license-file:       LICENSE
author:             PureClaw Contributors
maintainer:         doug@equitek.ai
category:           AI, Security, System
build-type:         Simple
extra-doc-files:    README.md
                    docs/ARCHITECTURE.md
                    docs/SECURITY_PRACTICES.md

common warnings
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates
               -Wincomplete-uni-patterns -Wmissing-export-lists
               -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints

library
  import:           warnings
  exposed-modules:
    PureClaw.Core.Types
    PureClaw.Core.Config
    PureClaw.Core.Errors
    PureClaw.Security.Path
    PureClaw.Security.Command
    PureClaw.Security.Policy
    PureClaw.Security.Secrets
    PureClaw.Security.Crypto
    PureClaw.Security.Pairing
    PureClaw.Effects.FileSystem
    PureClaw.Effects.Shell
    PureClaw.Effects.Network
    PureClaw.Effects.Memory
    PureClaw.Effects.ChannelIO
    PureClaw.Effects.Logger
    PureClaw.Tools.Registry
    PureClaw.Tools.Shell
    PureClaw.Tools.FileRead
    PureClaw.Tools.FileWrite
    PureClaw.Tools.MemoryTool
    PureClaw.Tools.HttpRequest
    PureClaw.Tools.Git
    PureClaw.Agent.Loop
    PureClaw.Agent.Context
    PureClaw.Agent.Memory
    PureClaw.Agent.Identity
    PureClaw.Providers.Class
    PureClaw.Providers.Anthropic
    PureClaw.Providers.OpenAI
    PureClaw.Providers.OpenRouter
    PureClaw.Providers.Ollama
    PureClaw.Channels.Class
    PureClaw.Channels.CLI
    PureClaw.Channels.Telegram
    PureClaw.Memory.Class
    PureClaw.Memory.SQLite
    PureClaw.Memory.Markdown
    PureClaw.Memory.None
    PureClaw.Gateway.Server
    PureClaw.Gateway.Routes
    PureClaw.Gateway.Auth
    PureClaw.Scheduler.Cron
    PureClaw.Scheduler.Heartbeat
  build-depends:
    base              >= 4.17 && < 5,
    -- Effects
    effectful         >= 2.3  && < 3,
    effectful-core    >= 2.3  && < 3,
    -- Data
    text              >= 2.0  && < 3,
    bytestring        >= 0.11 && < 1,
    containers        >= 0.6  && < 1,
    vector            >= 0.13 && < 1,
    time              >= 1.12 && < 2,
    -- JSON / Config
    aeson             >= 2.1  && < 3,
    tomland           >= 1.3  && < 2,
    -- HTTP
    warp              >= 3.3  && < 4,
    wai               >= 3.2  && < 4,
    wai-extra         >= 3.1  && < 4,
    http-client       >= 0.7  && < 1,
    http-client-tls   >= 0.3  && < 1,
    http-types        >= 0.12 && < 1,
    -- WebSockets
    websockets        >= 0.12 && < 1,
    -- Database
    sqlite-simple     >= 0.4  && < 1,
    -- Concurrency
    async             >= 2.2  && < 3,
    stm               >= 2.5  && < 3,
    -- Process
    typed-process     >= 0.2  && < 1,
    -- Security / Crypto
    crypton           >= 0.34 && < 1,
    memory            >= 0.18 && < 1,
    -- CLI
    optparse-applicative >= 0.18 && < 1,
    -- Logging
    fast-logger       >= 3.1  && < 4,
    -- Utils
    filepath          >= 1.4  && < 2,
    directory         >= 1.3  && < 2,
    transformers      >= 0.6  && < 1,
    mtl               >= 2.3  && < 3,
    unliftio          >= 0.2  && < 1,
  hs-source-dirs:   src
  default-language: GHC2021
  default-extensions:
    OverloadedStrings
    LambdaCase
    TupleSections
    ScopedTypeVariables
    DerivingStrategies
    DeriveGeneric
    DeriveAnyClass
    GeneralizedNewtypeDeriving
    TypeApplications
    DataKinds
    TypeFamilies

executable pureclaw
  import:           warnings
  main-is:          Main.hs
  hs-source-dirs:   app
  build-depends:
    base,
    pureclaw,
    optparse-applicative >= 0.18 && < 1,
  default-language: GHC2021

test-suite pureclaw-test
  import:           warnings
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  hs-source-dirs:   test
  build-depends:
    base,
    pureclaw,
    hspec             >= 2.10 && < 3,
    QuickCheck        >= 2.14 && < 3,
    hspec-wai         >= 0.11 && < 1,
  default-language: GHC2021
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
