cabal-version:      3.4
name:               pureclaw
version:            0.1.0.0
synopsis:           A Haskell-native AI agent runtime with security-by-construction
description:
  PureClaw is a complete AI agent runtime built in Haskell. It uses the type
  system to enforce security invariants that other runtimes enforce (or fail
  to enforce) through runtime checks and documentation.
  .
  Key properties:
  .
  * Shell commands require AuthorizedCommand — unauthorized execution is a type error
  * File access requires SafePath — workspace escape is a type error
  * Secrets have redacted Show instances — credential leaks are structurally prevented
  * Security policy is pure Haskell — fully testable without IO
  * Handle pattern for capabilities — dependencies are explicit, not global
  .
  No effect systems. ReaderT AppEnv IO and the Handle pattern throughout.

license:            MIT
license-file:       LICENSE
author:             PureClaw Contributors
maintainer:         doug@equitek.ai
category:           AI, Security, System
build-type:         Simple
extra-doc-files:    README.md
                    docs/ARCHITECTURE.md
                    docs/SECURITY_PRACTICES.md

common warnings
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates
               -Wincomplete-uni-patterns -Wmissing-export-lists
               -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints

library
  import:           warnings
  exposed-modules:
    -- Core types (no IO, no handles)
    PureClaw.Core.Types
    PureClaw.Core.Config
    PureClaw.Core.Errors
    -- Security (pure where possible)
    PureClaw.Security.Path
    PureClaw.Security.Command
    PureClaw.Security.Policy
    PureClaw.Security.Secrets
    PureClaw.Security.Crypto
    PureClaw.Security.Pairing
    -- Handles (capability interfaces + real implementations)
    PureClaw.Handles.File
    PureClaw.Handles.Shell
    PureClaw.Handles.Network
    PureClaw.Handles.Memory
    PureClaw.Handles.Channel
    PureClaw.Handles.Log
    -- Tools (take handles, return IO results)
    PureClaw.Tools.Registry
    PureClaw.Tools.Shell
    PureClaw.Tools.FileRead
    PureClaw.Tools.FileWrite
    PureClaw.Tools.Memory
    PureClaw.Tools.HttpRequest
    PureClaw.Tools.Git
    -- Agent
    PureClaw.Agent.Loop
    PureClaw.Agent.Context
    PureClaw.Agent.Memory
    PureClaw.Agent.Identity
    -- Providers
    PureClaw.Providers.Class
    PureClaw.Providers.Anthropic
    PureClaw.Providers.OpenAI
    PureClaw.Providers.OpenRouter
    PureClaw.Providers.Ollama
    -- Channels
    PureClaw.Channels.Class
    PureClaw.Channels.CLI
    PureClaw.Channels.Telegram
    PureClaw.Channels.Signal
    -- Memory backends
    PureClaw.Memory.SQLite
    PureClaw.Memory.Markdown
    PureClaw.Memory.None
    -- Gateway
    PureClaw.Gateway.Server
    PureClaw.Gateway.Routes
    PureClaw.Gateway.Auth
    -- Scheduler
    PureClaw.Scheduler.Cron
    PureClaw.Scheduler.Heartbeat
    -- CLI
    PureClaw.CLI.Commands
  build-depends:
    base              >= 4.17 && < 5,
    -- Data
    text              >= 2.0  && < 3,
    bytestring        >= 0.11 && < 1,
    containers        >= 0.6  && < 1,
    vector            >= 0.13 && < 1,
    time              >= 1.12 && < 2,
    -- JSON / Config
    aeson             >= 2.1  && < 3,
    tomland           >= 1.3  && < 2,
    -- HTTP
    warp              >= 3.3  && < 4,
    wai               >= 3.2  && < 4,
    wai-extra         >= 3.1  && < 4,
    http-client       >= 0.7  && < 1,
    http-client-tls   >= 0.3  && < 1,
    http-types        >= 0.12 && < 1,
    -- WebSockets
    websockets        >= 0.12 && < 1,
    -- Database
    sqlite-simple     >= 0.4  && < 1,
    -- Concurrency
    async             >= 2.2  && < 3,
    stm               >= 2.5  && < 3,
    -- Process
    typed-process     >= 0.2  && < 1,
    -- Security / Crypto
    crypton           >= 0.34 && < 1,
    memory            >= 0.18 && < 1,
    -- Monad
    transformers      >= 0.6  && < 1,
    mtl               >= 2.3  && < 3,
    -- CLI
    optparse-applicative >= 0.18 && < 1,
    -- Logging
    fast-logger       >= 3.1  && < 4,
    -- Utils
    filepath          >= 1.4  && < 2,
    directory         >= 1.3  && < 2,
  hs-source-dirs:   src
  default-language: GHC2021
  default-extensions:
    OverloadedStrings
    LambdaCase
    TupleSections
    ScopedTypeVariables
    DerivingStrategies
    DeriveGeneric
    GeneralizedNewtypeDeriving

executable pureclaw
  import:           warnings
  main-is:          Main.hs
  hs-source-dirs:   app
  build-depends:
    base,
    pureclaw,
    optparse-applicative >= 0.18 && < 1,
  default-language: GHC2021

test-suite pureclaw-test
  import:           warnings
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  hs-source-dirs:   test
  build-depends:
    base,
    pureclaw,
    hspec             >= 2.10 && < 3,
    QuickCheck        >= 2.14 && < 3,
    hspec-wai         >= 0.11 && < 1,
  default-language: GHC2021
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
