cabal-version:      3.4
name:               pureclaw
version:            0.1.0.0
synopsis:           A Haskell-native AI agent runtime with security-by-construction
description:
  PureClaw is a complete AI agent runtime built in Haskell. It uses the type
  system to enforce security invariants that other runtimes enforce (or fail
  to enforce) through runtime checks and documentation.
  .
  Key properties:
  .
  * Shell commands require AuthorizedCommand — unauthorized execution is a type error
  * File access requires SafePath — workspace escape is a type error
  * Secrets have redacted Show instances — credential leaks are structurally prevented
  * Security policy is pure Haskell — fully testable without IO
  * Handle pattern for capabilities — dependencies are explicit, not global
  .
  No effect systems. ReaderT AppEnv IO and the Handle pattern throughout.

license:            BSD-3-Clause
license-file:       LICENSE
author:             PureClaw Contributors
maintainer:         doug@equitek.ai
category:           AI, Security, System
build-type:         Simple
extra-doc-files:    README.md
                    docs/ARCHITECTURE.md
                    docs/SECURITY_PRACTICES.md

common warnings
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates
               -Wincomplete-uni-patterns -Wmissing-home-modules -Wpartial-fields
               -Wredundant-constraints

library
  import:           warnings
  exposed-modules:
    -- Auth
    PureClaw.Auth.AnthropicOAuth
    -- Core types (no IO, no handles)
    PureClaw.Core.Types
    PureClaw.Core.Config
    PureClaw.Core.Errors
    -- Security (pure where possible)
    PureClaw.Security.Path
    PureClaw.Security.Command
    PureClaw.Security.Policy
    PureClaw.Security.Secrets
    PureClaw.Security.Crypto
    PureClaw.Security.Pairing
    PureClaw.Security.Vault
    PureClaw.Security.Vault.Age
    PureClaw.Security.Vault.Passphrase
    PureClaw.Security.Vault.Plugin
    -- Handles (capability interfaces + real implementations)
    PureClaw.Handles.File
    PureClaw.Handles.Shell
    PureClaw.Handles.Network
    PureClaw.Handles.Memory
    PureClaw.Handles.Channel
    PureClaw.Handles.Process
    PureClaw.Handles.Log
    PureClaw.Handles.Transcript
    -- Tools (take handles, return IO results)
    PureClaw.Tools.Registry
    PureClaw.Tools.Shell
    PureClaw.Tools.FileRead
    PureClaw.Tools.FileWrite
    PureClaw.Tools.Memory
    PureClaw.Tools.HttpRequest
    PureClaw.Tools.Git
    PureClaw.Tools.Edit
    PureClaw.Tools.Process
    PureClaw.Tools.WebSearch
    PureClaw.Tools.Message
    PureClaw.Tools.Cron
    PureClaw.Tools.Image
    -- Agent
    PureClaw.Agent.Env
    PureClaw.Agent.Loop
    PureClaw.Agent.Context
    PureClaw.Agent.Memory
    PureClaw.Agent.Compaction
    PureClaw.Agent.ContextTracker
    PureClaw.Agent.Identity
    PureClaw.Agent.SlashCommands
    -- Providers
    PureClaw.Providers.Class
    PureClaw.Providers.Anthropic
    PureClaw.Providers.OpenAI
    PureClaw.Providers.OpenRouter
    PureClaw.Providers.Ollama
    -- Channels
    PureClaw.Channels.Class
    PureClaw.Channels.CLI
    PureClaw.Channels.Telegram
    PureClaw.Channels.Signal
    PureClaw.Channels.Signal.Transport
    -- Memory backends
    PureClaw.Memory.SQLite
    PureClaw.Memory.Markdown
    PureClaw.Memory.None
    -- Gateway
    PureClaw.Gateway.Server
    PureClaw.Gateway.Routes
    PureClaw.Gateway.Auth
    -- Scheduler
    PureClaw.Scheduler.Cron
    PureClaw.Scheduler.Heartbeat
    -- Transcript
    PureClaw.Transcript
    PureClaw.Transcript.Types
    -- CLI
    PureClaw.CLI.Config
    PureClaw.CLI.Import
    PureClaw.CLI.Commands
  build-depends:
    base              >= 4.20,
    age,
    aeson,
    async,
    base16-bytestring,
    base64-bytestring,
    bytestring,
    containers,
    crypton,
    directory,
    filepath,
    haskeline,
    http-client,
    http-client-tls,
    http-types,
    memory,
    mtl,
    optparse-applicative,
    sqlite-simple,
    stm,
    text,
    time,
    tomland,
    transformers,
    unix,
    typed-process,
    vector,
    wai,
    wai-extra,
    warp,
    websockets,
  hs-source-dirs:   src
  default-language: GHC2021
  default-extensions:
    OverloadedStrings
    LambdaCase
    TupleSections
    ScopedTypeVariables
    DerivingStrategies
    DeriveGeneric
    GeneralizedNewtypeDeriving

executable pureclaw
  import:           warnings
  main-is:          Main.hs
  hs-source-dirs:   app
  build-depends:
    base,
    pureclaw,
  default-language: GHC2021

test-suite pureclaw-test
  import:           warnings
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  other-modules:
    Auth.AnthropicOAuthSpec
    Core.TypesSpec
    Security.SecretsSpec
    Core.ErrorsSpec
    Security.PolicySpec
    Security.PathSpec
    Security.CommandSpec
    Core.ConfigSpec
    Handles.LogSpec
    Handles.FileSpec
    Handles.ShellSpec
    Handles.NetworkSpec
    Handles.MemorySpec
    Handles.ChannelSpec
    Providers.ClassSpec
    Agent.ContextSpec
    Providers.AnthropicSpec
    Agent.LoopSpec
    Channels.CLISpec
    CLI.CommandsSpec
    CLI.ConfigSpec
    CLI.ImportSpec
    Tools.RegistrySpec
    Tools.ShellSpec
    Tools.FileReadSpec
    Tools.GitSpec
    Tools.MemorySpec
    Tools.EditSpec
    Tools.ProcessSpec
    Handles.ProcessSpec
    Tools.WebSearchSpec
    Tools.MessageSpec
    Tools.CronSpec
    Tools.ImageSpec
    Memory.MarkdownSpec
    Memory.SQLiteSpec
    Memory.NoneSpec
    Agent.MemorySpec
    Agent.CompactionSpec
    Agent.ContextTrackerSpec
    Agent.SlashCommandsSpec
    Providers.OpenAISpec
    Providers.OllamaSpec
    Providers.OpenRouterSpec
    Security.CryptoSpec
    Security.PairingSpec
    Security.VaultAgeSpec
    Security.VaultPassphraseSpec
    Security.VaultPluginSpec
    Security.VaultSpec
    Gateway.AuthSpec
    Gateway.RoutesSpec
    Gateway.ServerSpec
    Channels.ClassSpec
    Channels.TelegramSpec
    Channels.SignalSpec
    Channels.SignalTransportSpec
    Agent.IdentitySpec
    Scheduler.CronSpec
    Scheduler.HeartbeatSpec
    Integration.SignalFlowSpec
    Integration.CLISpec
    Integration.ImportRoundTripSpec
    Transcript.TypesSpec
    Handles.TranscriptSpec
  hs-source-dirs:   test
  build-tool-depends:
    pureclaw:pureclaw
  build-depends:
    base,
    pureclaw,
    aeson,
    async,
    base16-bytestring,
    base64-bytestring,
    bytestring,
    containers,
    directory,
    filepath,
    http-client,
    http-client-tls,
    http-types,
    optparse-applicative,
    stm,
    temporary,
    text,
    time,
    wai,
    warp,
    hspec,
    typed-process,
    unix,
    QuickCheck,
  default-language: GHC2021
  default-extensions:
    OverloadedStrings
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
